[gd_scene load_steps=67 format=3 uid="uid://df7bfpv41d0aw"]

[ext_resource type="Script" path="res://controls_screen.gd" id="1_nrx28"]
[ext_resource type="Texture2D" uid="uid://rdyr5fb3spxb" path="res://level/background/nightsky_1.png" id="2_hovcw"]
[ext_resource type="Texture2D" uid="uid://btpcjj2r8q6pj" path="res://level/background/cityscroller_3.png" id="3_2o8j8"]
[ext_resource type="Texture2D" uid="uid://b0fgn0bnx1j55" path="res://level/background/cityscroller_4.png" id="4_k8nbd"]
[ext_resource type="Texture2D" uid="uid://m6e7n0n2o7it" path="res://level/background/cityscoller_5.png" id="5_qvf02"]
[ext_resource type="FontFile" uid="uid://bf0q0pmkhfebo" path="res://fonts/PixelTandysoft-0rJG.ttf" id="6_x6isi"]
[ext_resource type="AudioStream" uid="uid://8fdmxw0dmaje" path="res://audio/welcometoparthneon.mp3" id="7_yv5x2"]
[ext_resource type="AudioStream" uid="uid://c3g6kk8ssuwth" path="res://audio/Beat_02_Arpeggiator.mp3" id="8_4auur"]
[ext_resource type="Texture2D" uid="uid://c2esqovrwlsqf" path="res://platforms/basic_neon_block_blue.png" id="9_q0x2k"]
[ext_resource type="Texture2D" uid="uid://dh2re7kh00xpk" path="res://ui/ps4_gamepad isolated.png" id="10_x7tsj"]
[ext_resource type="Texture2D" uid="uid://dh04l3lfh5cqi" path="res://ui/gdb-playstation-2 circle flat.png" id="11_cxp6w"]
[ext_resource type="Texture2D" uid="uid://0c1b8l6q4nx1" path="res://ui/gdb-playstation-2 cross flat.png" id="12_8iclg"]
[ext_resource type="Texture2D" uid="uid://cpj2wevsuyukj" path="res://ui/gdb-playstation-2 triangle flat.png" id="13_gqgbp"]
[ext_resource type="Texture2D" uid="uid://bosfdgi0rhxxl" path="res://ui/gdb-playstation-2-square-flat.png" id="14_0uumd"]
[ext_resource type="Texture2D" uid="uid://bm6tsof7j3ogx" path="res://ui/Single keyboard (dark).png" id="15_imlq1"]
[ext_resource type="Texture2D" uid="uid://desy7kc5rpyue" path="res://ui/Single keyboard (light) overlay.png" id="16_f6k2d"]
[ext_resource type="Texture2D" uid="uid://h5kwf6tc4e2q" path="res://ui/Single keyboard (light) X.png" id="17_y3pf0"]
[ext_resource type="Texture2D" uid="uid://brwbm6oltt1sg" path="res://ui/Single keyboard (light) up.png" id="18_ydi1f"]
[ext_resource type="Texture2D" uid="uid://cdotxoh565ier" path="res://ui/Single keyboard (light) down.png" id="19_srlak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ow5o"]
bg_color = Color(0.2, 0.227451, 0.505882, 0.909804)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f4l8"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_5woa5"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxqgs"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxjuo"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v215"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_15my7"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7hy"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_57aeq"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_c311b"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hqfa"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d2h8"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_aml2w"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xi46"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mlfj"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_jltog"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqhd"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_frvqr"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kqts"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_1atjw"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2s5g"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_shwo8"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7sr"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_uabar"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qk0e"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5hqx"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivypg"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu4ig"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1atw"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyd3u"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_s58wj"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uljf"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnrqg"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0nru"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_htiil"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqn6y"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_un451"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hu87"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7dgm"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6j7s"]
atlas = ExtResource("2_hovcw")
region = Rect2(5580, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ix7"]
atlas = ExtResource("2_hovcw")
region = Rect2(7440, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfvwg"]
atlas = ExtResource("2_hovcw")
region = Rect2(0, 8880, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyexp"]
atlas = ExtResource("2_hovcw")
region = Rect2(1860, 8880, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_susfd"]
atlas = ExtResource("2_hovcw")
region = Rect2(3720, 8880, 1860, 1110)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2das"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f4l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5woa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxqgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15my7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu7hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57aeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c311b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hqfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d2h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aml2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xi46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mlfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jltog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frvqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kqts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1atjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2s5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shwo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu7sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uabar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qk0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5hqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivypg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu4ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1atw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyd3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s58wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uljf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnrqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0nru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htiil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqn6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un451")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hu87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7dgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6j7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfvwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyexp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_susfd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyb76"]
bg_color = Color(0.748004, 0.500216, 0.736765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5m7c"]
bg_color = Color(0.360784, 0.392157, 0.466667, 1)

[node name="ControlsScreen" type="Node2D"]
script = ExtResource("1_nrx28")

[node name="Panel" type="Panel" parent="."]
offset_right = 1924.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="NightSky" type="AnimatedSprite2D" parent="."]
position = Vector2(957, 552)
scale = Vector2(1.03548, 1.01441)
sprite_frames = SubResource("SpriteFrames_q2das")
frame_progress = 0.922205

[node name="NightSky2" type="AnimatedSprite2D" parent="."]
position = Vector2(969.5, -504)
scale = Vector2(1.04032, 1.01441)
sprite_frames = SubResource("SpriteFrames_q2das")
frame_progress = 0.522819

[node name="City3" type="Sprite2D" parent="."]
position = Vector2(5181, 600)
scale = Vector2(3, 3)
texture = ExtResource("3_2o8j8")

[node name="City4" type="Sprite2D" parent="."]
position = Vector2(5066, 674)
scale = Vector2(3, 3)
texture = ExtResource("4_k8nbd")

[node name="City5" type="Sprite2D" parent="."]
position = Vector2(5146, 758)
scale = Vector2(3, 3)
texture = ExtResource("5_qvf02")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 3.0
offset_right = 38400.0
offset_bottom = 21583.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 2000
bbcode_enabled = true
text = "[center]Controls[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 672.0
offset_top = 961.0
offset_right = 1227.0
offset_bottom = 1057.0
theme_override_constants/separation = 28

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_x6isi")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dyb76")
text = "  Back  "

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_x6isi")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dyb76")
text = " Keyboard "

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Welcome" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yv5x2")
volume_db = -5.0
pitch_scale = 0.95

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4auur")
volume_db = -6.0
pitch_scale = 0.85
autoplay = true

[node name="ScrollTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Prism" type="Sprite2D" parent="."]
position = Vector2(965, -398)
scale = Vector2(2, 2)
texture = ExtResource("9_q0x2k")

[node name="Panel2" type="Panel" parent="."]
offset_left = 394.0
offset_top = 191.0
offset_right = 1511.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="Sprite2D" type="Sprite2D" parent="Panel2"]
position = Vector2(558, 420)
texture = ExtResource("10_x7tsj")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 772.0
offset_top = 387.0
offset_right = 1142.0
offset_bottom = 561.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "\\ 
  Jump"

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 754.0
offset_top = 265.0
offset_right = 1124.0
offset_bottom = 338.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "/ Flash"

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 106.0
offset_top = 297.0
offset_right = 476.0
offset_bottom = 370.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "Movement \\"

[node name="RichTextLabel5" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 397.0
offset_top = 26.0
offset_right = 767.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "Flash:   /
"

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 397.0
offset_top = 92.0
offset_right = 767.0
offset_bottom = 225.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "Jump:   /
"

[node name="Sprite2D2" type="Sprite2D" parent="Panel2"]
position = Vector2(540, 123)
scale = Vector2(3, 3)
texture = ExtResource("11_cxp6w")

[node name="Sprite2D3" type="Sprite2D" parent="Panel2"]
position = Vector2(620, 123)
scale = Vector2(3, 3)
texture = ExtResource("12_8iclg")

[node name="Sprite2D4" type="Sprite2D" parent="Panel2"]
position = Vector2(560, 56)
scale = Vector2(3, 3)
texture = ExtResource("13_gqgbp")

[node name="Sprite2D5" type="Sprite2D" parent="Panel2"]
position = Vector2(640, 60)
scale = Vector2(3.5, 3.5)
texture = ExtResource("14_0uumd")

[node name="Panel3" type="Panel" parent="."]
offset_left = 394.0
offset_top = 191.0
offset_right = 1511.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="Sprite2D" type="Sprite2D" parent="Panel3"]
position = Vector2(555, 369)
scale = Vector2(1.5, 1.5)
texture = ExtResource("15_imlq1")

[node name="Sprite2D6" type="Sprite2D" parent="Panel3"]
position = Vector2(555, 369)
scale = Vector2(1.5, 1.5)
texture = ExtResource("16_f6k2d")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 534.0
offset_top = 469.0
offset_right = 904.0
offset_bottom = 643.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "\\ 
  Jump"

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 186.0
offset_top = 427.0
offset_right = 474.0
offset_bottom = 558.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 42
text = "      /
Flash "

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 792.0
offset_top = 482.0
offset_right = 1229.0
offset_bottom = 604.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "    |
Movement"

[node name="RichTextLabel7" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 754.0
offset_top = 306.0
offset_right = 1191.0
offset_bottom = 428.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "-------- Pause"

[node name="RichTextLabel5" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 397.0
offset_top = 26.0
offset_right = 767.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "Flash:   /
"

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 397.0
offset_top = 92.0
offset_right = 767.0
offset_bottom = 225.0
theme_override_fonts/normal_font = ExtResource("6_x6isi")
theme_override_font_sizes/normal_font_size = 40
text = "Jump:   /
"

[node name="Sprite2D2" type="Sprite2D" parent="Panel3"]
position = Vector2(534, 122)
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_y3pf0")

[node name="Panel" type="Panel" parent="Panel3/Sprite2D2"]
offset_left = -9.0
offset_top = -8.0
offset_right = 10.0
offset_bottom = 8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w5m7c")

[node name="Sprite2D3" type="Sprite2D" parent="Panel3"]
position = Vector2(636, 122)
scale = Vector2(2, 2)
texture = ExtResource("18_ydi1f")

[node name="Sprite2D4" type="Sprite2D" parent="Panel3"]
position = Vector2(560, 56)
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_y3pf0")

[node name="Sprite2D5" type="Sprite2D" parent="Panel3"]
position = Vector2(653, 54)
scale = Vector2(2, 2)
texture = ExtResource("19_srlak")

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="finished" from="Theme" to="." method="_on_theme_finished"]
[connection signal="timeout" from="ScrollTimer" to="." method="_on_scroll_timer_timeout"]
